# ParallelWebCrawler

./: CMakeLists.txt  main.cpp
config/: GlobalConfig.h
core/: ConcurrentQueue.h  CrawlerState.cpp  CrawlerState.h  ThreadPool.h  WordCounter.cpp  WordCounter.h
gui/: ScreenManager.cpp  ScreenManager.h
net/: Parser.cpp  Parser.h  WebsiteDownloader.cpp  WebsiteDownloader.h
resources/: template.txt
util/: Point.h  common.h
